snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.module.sha256
ca54dca94f1b5a0a5e7caeeff0bac31336274e52c4218bd115ad91e24dd69afe